@@ -4,11 +4,6 @@ Foundation, Inc.
    This file is free documentation; the Free Software Foundation gives
 unlimited permission to copy, distribute and modify it.
 
-********************************************
-* Also take note of the package specific   * 
-* installation instructions in doc/INSTALL *
-********************************************
-
 Basic Installation
 ==================
 
