@@ -21,7 +21,7 @@ AC_PROG_INSTALL
 # Look for compiler
 AC_PROG_CC
 AC_PROG_CXX
-AC_PROG_LIBTOOL
+AM_PROG_LIBTOOL
 
 # Checks for header files.
 AC_HEADER_STDC
