@@ -11,6 +11,9 @@ webserver_user=wwwrun
 ;Path all scripts have to be in
 docroot=/
 
+;Path to chroot() to before executing script
+;chroot=/mychroot
+
 ; Security options
 allow_file_group_writeable=false
 allow_file_others_writeable=false
