@@ -8,6 +8,7 @@
 - Fix problems with scripts sending "Last-Modified" headers
 - Extended autoconf script to look for an installation of APR
   and to use its includedir when building mod_suphp for Apache 2
+- Added support for chroot() call before execution of script
 	
 * Version 0.6.0 (27 May 2005)
 ++ The development of this version was sponsored by Techno-vi - Wanix. ++
